# agent-one

./: .gitignore  .pylintrc  basic_ears.py  blip_handler.py  clap_detection.ipynb  listener.py  main.py  multiprocess_test.ipynb  names.txt  pyproject.toml  server.py  stateful_ears.py  test.py  test_agent.ipynb  test_vosk.ipynb  test_whisper_local.ipynb  voice_recog.ipynb  vosk_streamed_ears.py  word_detection_with_timestamps.ipynb
client/agent-one/: bun.lockb  package.json
client/agent-one/src/: App.tsx
modded_deps/: modded_recognizer.py
models/: agent_peripheral.py  blip.py  blip_kind.py  ears.py  mouth.py  recognizer_name.py
notebooks/tts/: tts.ipynb
tts/: pyproject.toml
tts/proto/: test_rtsp_client.py  test_rtsp_server.py  tts.ipynb
