[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["cameron <cameron-04@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohappyeyeballs = "2.4.6"
aiohttp = "3.11.13"
aiosignal = "1.3.2"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
anthropic = "0.47.2"
anyio = "4.8.0"
asttokens = "3.0.0"
attrs = "25.1.0"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
debugpy = "1.8.12"
decorator = "5.2.1"
distro = "1.9.0"
ecdsa = "0.19.0"
executing = "2.2.0"
fastapi = "0.115.11"
filelock = "3.17.0"
fonttools = "4.56.0"
frozenlist = "1.5.0"
fsspec = "2025.2.0"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
httpx-sse = "0.4.0"
idna = "3.10"
ipykernel = "6.29.5"
ipython = "8.32.0"
jedi = "0.19.2"
jinja2 = "3.1.5"
jiter = "0.8.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jupyter-client = "8.6.3"
jupyter-core = "5.7.2"
kiwisolver = "1.4.8"
langchain = "0.3.19"
langchain-anthropic = "0.3.8"
langchain-community = "0.3.18"
langchain-core = "0.3.40"
langchain-text-splitters = "0.3.6"
langgraph = "0.2.74"
langgraph-checkpoint = "2.0.16"
langgraph-checkpoint-sqlite = "2.0.5"
langgraph-sdk = "0.1.53"
langsmith = "0.3.11"
llvmlite = "0.44.0"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
matplotlib = "3.10.1"
matplotlib-inline = "0.1.7"
more-itertools = "10.6.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
numba = "0.61.0"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-cusparselt-cu12 = "0.6.2"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
openai-whisper = "20240930"
orjson = "3.10.15"
packaging = "24.2"
parso = "0.8.4"
pexpect = "4.9.0"
pillow = "11.1.0"
platformdirs = "4.3.6"
prompt-toolkit = "3.0.50"
propcache = "0.3.0"
psutil = "7.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pyasn1 = "0.4.8"
pyaudio = "0.2.14"
pycparser = "2.22"
pydantic = "2.10.6"
pydantic-settings = "2.8.0"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pyparsing = "3.2.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-jose = "3.4.0"
pyyaml = "6.0.2"
pyzmq = "26.2.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rsa = "4.9"
scipy = "1.15.2"
setuptools = "75.8.2"
six = "1.17.0"
sniffio = "1.3.1"
soundfile = "0.13.1"
speechrecognition = "3.14.1"
sqlalchemy = "2.0.38"
sse-starlette = "2.2.1"
stack-data = "0.6.3"
starlette = "0.46.0"
sympy = "1.13.1"
tavily-python = "0.5.1"
tenacity = "9.0.0"
tiktoken = "0.9.0"
torch = "2.6.0"
tornado = "6.4.2"
tqdm = "4.67.1"
traitlets = "5.14.3"
triton = "3.2.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"
watchfiles = "1.0.4"
wcwidth = "0.2.13"
websockets = "15.0"
yarl = "1.18.3"
zstandard = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
