[tool.poetry]
name = "tts-server"
version = "0.1.0"
description = ""
authors = ["cameron <cameron-04@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tts = "^0.22.0"
sounddevice = "^0.5.1"
ipykernel = "^6.29.5"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
